@@ -30,20 +30,25 @@ import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import hudson.AbortException;
 import hudson.EnvVars;
+import hudson.Extension;
+import hudson.ExtensionList;
 import hudson.FilePath;
 import hudson.Functions;
 import hudson.Launcher;
 import hudson.Util;
 import hudson.init.Terminator;
+import hudson.model.Computer;
 import hudson.model.Node;
 import hudson.model.Result;
 import hudson.model.Run;
 import hudson.model.TaskListener;
+import hudson.model.listeners.ItemListener;
 import hudson.remoting.Channel;
 import hudson.remoting.ChannelClosedException;
+import hudson.slaves.ComputerListener;
+import hudson.slaves.OfflineCause;
 import hudson.util.DaemonThreadFactory;
 import hudson.util.FormValidation;
-import hudson.util.LogTaskListener;
 import hudson.util.NamingThreadFactory;
 import hudson.util.StreamTaskListener;
 import java.io.FilterOutputStream;
@@ -51,8 +56,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.PrintStream;
-import java.io.UnsupportedEncodingException;
-import java.lang.reflect.Field;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.Set;
@@ -66,13 +69,15 @@ import jenkins.model.Jenkins;
 import jenkins.tasks.filters.EnvVarsFilterableBuilder;
 import jenkins.util.Timer;
 import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang.StringUtils;
 import org.jenkinsci.plugins.durabletask.Controller;
 import org.jenkinsci.plugins.durabletask.DurableTask;
 import org.jenkinsci.plugins.durabletask.Handler;
 import org.jenkinsci.plugins.workflow.FilePathUtils;
 import org.jenkinsci.plugins.workflow.actions.LabelAction;
+import org.jenkinsci.plugins.workflow.flow.FlowExecutionList;
+import org.jenkinsci.plugins.workflow.flow.FlowExecutionOwner;
 import org.jenkinsci.plugins.workflow.graph.FlowNode;
+import org.jenkinsci.plugins.workflow.log.OutputStreamTaskListener;
 import org.jenkinsci.plugins.workflow.steps.AbstractStepExecutionImpl;
 import org.jenkinsci.plugins.workflow.steps.FlowInterruptedException;
 import org.jenkinsci.plugins.workflow.steps.Step;
@@ -142,7 +147,7 @@ public abstract class DurableTaskStep extends Step implements EnvVarsFilterableB
     }
 
     @Override public StepExecution start(StepContext context) throws Exception {
-        if (this.label != null) {
+        if (label != null) {
             context.get(FlowNode.class).addAction(new LabelAction(label));
         }
         return new Execution(context, this);
@@ -249,7 +254,8 @@ public abstract class DurableTaskStep extends Step implements EnvVarsFilterableB
      * {@link #ws} is nulled out and Jenkins waits until a fresh handle is available.
      */
     @SuppressFBWarnings(value="SE_TRANSIENT_FIELD_NOT_RESTORED", justification="recurrencePeriod is set in onResume, not deserialization")
-    static final class Execution extends AbstractStepExecutionImpl implements Runnable, ExecutionRemotable {
+    @Restricted(NoExternalUse.class)
+    public static final class Execution extends AbstractStepExecutionImpl implements Runnable, ExecutionRemotable {
 
         private static final long MIN_RECURRENCE_PERIOD = 250; // ¼s
         private static final long MAX_RECURRENCE_PERIOD = 15000; // 15s
@@ -269,12 +275,10 @@ public abstract class DurableTaskStep extends Step implements EnvVarsFilterableB
         private transient volatile ScheduledFuture<?> task;
         /** Defined only after {@link #stop} has been called. */
         private transient volatile ScheduledFuture<?> stopTask;
-        /** Set if we have already notified the build log of a connectivity problem, which is done at most once per session. */
-        private transient boolean printedCannotContactMessage;
         /** Serialized state of the controller. */
         private Controller controller;
         /** {@link Node#getNodeName} of {@link #ws}. */
-        private String node;
+        public String node;
         /** {@link FilePath#getRemote} of {@link #ws}. */
         private String remote;
         /** Whether the entire stdout of the process is to become the return value of the step. */
@@ -287,7 +291,7 @@ public abstract class DurableTaskStep extends Step implements EnvVarsFilterableB
         private transient boolean awaitingAsynchExit;
         /** The first throwable used to stop the task */
         private transient volatile Throwable causeOfStoppage;
-        /** If nonzero, {@link System#nanoTime} when we first discovered that the node had been removed. */
+        /** If nonzero, {@link System#nanoTime} when we first discovered that the node had been removed or is offline. */
         private transient long removedNodeDiscovered;
 
         Execution(StepContext context, DurableTaskStep step) {
@@ -342,31 +346,24 @@ public abstract class DurableTaskStep extends Step implements EnvVarsFilterableB
             if (ws == null) {
                 ws = FilePathUtils.find(node, remote);
                 if (ws == null) {
-                    // Part of JENKINS-49707: check whether an agent has been removed.
-                    // (Note that a Computer may be missing because a Node is offline,
-                    // and conversely after removing a Node its Computer may remain for a while.
-                    // Therefore we only fail here if _both_ are absent.)
+                    // Part of JENKINS-49707: check whether an agent has been removed or is offline.
                     // ExecutorStepExecution.RemovedNodeListener will normally do this first, so this is a fallback.
                     Jenkins j = Jenkins.getInstanceOrNull();
-                    if (ExecutorStepExecution.RemovedNodeCause.ENABLED && !node.isEmpty() && j != null && j.getNode(node) == null) {
-                        if (removedNodeDiscovered == 0) {
-                            LOGGER.fine(() -> "discovered that " + node + " has been removed");
-                            removedNodeDiscovered = System.nanoTime();
+                    if (!node.isEmpty() && j != null) {
+                        var agent = j.getNode(node);
+                        if (agent == null || agent.getChannel() == null) {
+                            offline(null);
                             return null;
-                        } else if (System.nanoTime() - removedNodeDiscovered < TimeUnit.MILLISECONDS.toNanos(ExecutorStepExecution.TIMEOUT_WAITING_FOR_NODE_MILLIS)) {
-                            LOGGER.fine(() -> "rediscovering that " + node + " has been removed");
-                            return null;
-                        } else {
-                            LOGGER.fine(() -> "rediscovering that " + node + " has been removed and timeout has expired");
-                            listener().getLogger().println(node + " has been removed for " + Util.getTimeSpanString(ExecutorStepExecution.TIMEOUT_WAITING_FOR_NODE_MILLIS) + ", assuming it is not coming back");
-                            throw new FlowInterruptedException(Result.ABORTED, /* TODO false probably more appropriate */true, new ExecutorStepExecution.RemovedNodeCause());
                         }
                     }
                     removedNodeDiscovered = 0; // something else; reset
                     LOGGER.log(Level.FINE, "Jenkins is not running, no such node {0}, or it is offline", node);
                     return null;
                 }
-                removedNodeDiscovered = 0;
+                if (removedNodeDiscovered != 0) {
+                    removedNodeDiscovered = 0;
+                    listener().getLogger().println(node + " is back online");
+                }
                 if (watching) {
                     try {
                         controller.watch(ws, new HandlerImpl(this, ws, listener()), listener());
@@ -394,15 +391,29 @@ public abstract class DurableTaskStep extends Step implements EnvVarsFilterableB
             return ws;
         }
 
-        private void getWorkspaceProblem(Exception x) {
+        private void offline(@CheckForNull Throwable x) throws FlowInterruptedException {
+            if (!ExecutorStepExecution.RemovedNodeCause.ENABLED) {
+                return;
+            }
+            if (removedNodeDiscovered == 0) {
+                LOGGER.fine(() -> "discovered that " + node + " has been removed/offline");
+                removedNodeDiscovered = System.nanoTime();
+                listener().getLogger().println(node + " seems to be removed or offline " + (x != null ? "(" + x + ")" : "") + "; will wait for " + Util.getTimeSpanString(ExecutorStepExecution.TIMEOUT_WAITING_FOR_NODE_MILLIS) + " for it to come back online");
+            } else if (System.nanoTime() - removedNodeDiscovered < TimeUnit.MILLISECONDS.toNanos(ExecutorStepExecution.TIMEOUT_WAITING_FOR_NODE_MILLIS)) {
+                LOGGER.fine(() -> "rediscovering that " + node + " has been removed/offline");
+            } else {
+                LOGGER.fine(() -> "rediscovering that " + node + " has been removed/offline and timeout has expired");
+                listener().getLogger().println(node + " has been removed or offline for " + Util.getTimeSpanString(ExecutorStepExecution.TIMEOUT_WAITING_FOR_NODE_MILLIS) + "; assuming it is not coming back, and terminating shell step");
+                throw new FlowInterruptedException(Result.ABORTED, false, new ExecutorStepExecution.RemovedNodeTimeoutCause());
+            }
+        }
+
+        private void getWorkspaceProblem(Exception x) throws FlowInterruptedException {
             // RequestAbortedException, ChannelClosedException, EOFException, wrappers thereof; InterruptedException if it just takes too long.
             LOGGER.log(Level.FINE, node + " is evidently offline now", x);
             ws = null;
             recurrencePeriod = MIN_RECURRENCE_PERIOD;
-            if (!printedCannotContactMessage) {
-                listener().getLogger().println("Cannot contact " + node + ": " + x);
-                printedCannotContactMessage = true;
-            }
+            offline(x);
         }
 
         private synchronized @NonNull TaskListener listener() {
@@ -421,37 +432,34 @@ public abstract class DurableTaskStep extends Step implements EnvVarsFilterableB
                     LOGGER.log(Level.FINEST, "JENKINS-34021: DurableTaskStep.Execution.listener present in {0}", context);
                 } else {
                     LOGGER.log(Level.WARNING, "JENKINS-34021: TaskListener not available upon request in {0}", context);
-                    l = new LogTaskListener(LOGGER, Level.FINE);
+                    l = TaskListener.NULL;
                 }
             } catch (Exception x) {
                 LOGGER.log(Level.FINE, "JENKINS-34021: could not get TaskListener in " + context, x);
-                l = new LogTaskListener(LOGGER, Level.FINE);
+                l = TaskListener.NULL;
                 recurrencePeriod = 0;
             }
             return l;
         }
 
         /**
-         * Interprets {@link PrintStream#close} as a signal to end a final newline if necessary.
+         * Interprets {@link OutputStream#close} as a signal to end a final newline if necessary.
          */
-        private static final class NewlineSafeTaskListener implements TaskListener {
+        private static final class NewlineSafeTaskListener extends OutputStreamTaskListener.Default {
 
             private static final long serialVersionUID = 1;
 
             private final TaskListener delegate;
-            private transient PrintStream logger;
+            private transient OutputStream out;
 
             NewlineSafeTaskListener(TaskListener delegate) {
                 this.delegate = delegate;
             }
 
             // Similar to DecoratedTaskListener:
-            @NonNull
-            @Override public synchronized PrintStream getLogger() {
-                if (logger == null) {
-                    LOGGER.fine("creating filtered stream");
-                    OutputStream base = delegate.getLogger();
-                    OutputStream filtered = new FilterOutputStream(base) {
+            @Override public synchronized OutputStream getOutputStream() {
+                if (out == null) {
+                    out = new FilterOutputStream(OutputStreamTaskListener.getOutputStream(delegate)) {
                         boolean nl = true; // empty string does not need a newline
                         @Override public void write(int b) throws IOException {
                             super.write(b);
@@ -470,14 +478,12 @@ public abstract class DurableTaskStep extends Step implements EnvVarsFilterableB
                             }
                             flush(); // do *not* call base.close() here, unlike super.close()
                         }
+                        @Override public String toString() {
+                            return "NewlineSafeTaskListener.output[" + out + "]";
+                        }
                     };
-                    try {
-                        logger = new PrintStream(filtered, false, "UTF-8");
-                    } catch (UnsupportedEncodingException x) {
-                        throw new AssertionError(x);
-                    }
                 }
-                return logger;
+                return out;
             }
 
         }
@@ -522,6 +528,9 @@ public abstract class DurableTaskStep extends Step implements EnvVarsFilterableB
         }
 
         @Override public String getStatus() {
+            if (controller == null) {
+                return "not yet started";
+            }
             StringBuilder b = new StringBuilder();
             try (Timeout timeout = Timeout.limit(2, TimeUnit.SECONDS)) { // CpsThreadDump applies a 3s timeout anyway
                 FilePath workspace = getWorkspace();
@@ -536,11 +545,11 @@ public abstract class DurableTaskStep extends Step implements EnvVarsFilterableB
             b.append("; recurrence period: ").append(recurrencePeriod).append("ms");
             ScheduledFuture<?> t = task;
             if (t != null) {
-                b.append("; check task scheduled; cancelled? ").append(t.isCancelled()).append(" done? ").append(t.isDone());
+                b.append("; check task scheduled; cancelled? ").append(t.isCancelled()).append(" done? ").append(t.isDone()).append(" delay ").append(t.getDelay(TimeUnit.MILLISECONDS)).append("ms");
             }
             t = stopTask;
             if (t != null) {
-                b.append("; stop task scheduled; cancelled? ").append(t.isCancelled()).append(" done? ").append(t.isDone());
+                b.append("; stop task scheduled; cancelled? ").append(t.isCancelled()).append(" done? ").append(t.isDone()).append(" delay ").append(t.getDelay(TimeUnit.MILLISECONDS)).append("ms");
             }
             return b.toString();
         }
@@ -584,9 +593,12 @@ public abstract class DurableTaskStep extends Step implements EnvVarsFilterableB
                     Integer exitCode = controller.exitStatus(workspace, launcher(), listener);
                     if (exitCode == null) {
                         LOGGER.log(Level.FINE, "still running in {0} on {1}", new Object[] {remote, node});
+                    } else if (recurrencePeriod == 0) {
+                        LOGGER.fine(() -> "late check in " + remote + " on " + node + " ignored");
                     } else if (awaitingAsynchExit) {
                         recurrencePeriod = 0;
-                        getContext().onFailure(new AbortException("script apparently exited with code " + exitCode + " but asynchronous notification was lost"));
+                        listener.getLogger().println("script apparently exited with code " + exitCode + " but asynchronous notification was lost");
+                        handleExit(exitCode, () -> controller.getOutput(workspace, launcher()));
                     } else {
                         LOGGER.log(Level.FINE, "exited with {0} in {1} on {2}; expect asynchronous exit soon", new Object[] {exitCode, remote, node});
                         awaitingAsynchExit = true;
@@ -613,15 +625,30 @@ public abstract class DurableTaskStep extends Step implements EnvVarsFilterableB
             } catch (Exception x) {
                 LOGGER.log(Level.FINE, "could not check " + workspace, x);
                 ws = null;
-                if (!printedCannotContactMessage) {
-                    listener.getLogger().println("Cannot contact " + node + ": " + x);
-                    printedCannotContactMessage = true;
+                try {
+                    offline(x);
+                } catch (FlowInterruptedException x2) {
+                    if (causeOfStoppage == null) {
+                        getContext().onFailure(x2);
+                    }
                 }
+            }
+        }
+
+        /** Works around the fact that {@link Terminator} is run before {@link Jenkins#isTerminating} is set. */
+        @Extension public static final class CheckForTerminating extends ItemListener {
+            boolean terminating;
+            @Override public void onBeforeShutdown() {
+                terminating = true;
             }
         }
 
         // called remotely from HandlerImpl
         @Override public void exited(int exitCode, byte[] output) throws Exception {
+            if (ExtensionList.lookupSingleton(CheckForTerminating.class).terminating) {
+                throw new IllegalStateException("Will not handle process exits during shutdown; build should recheck when resumed");
+            }
+            recurrencePeriod = 0;
             try {
                 getContext().get(TaskListener.class);
             } catch (IOException | InterruptedException x) {
@@ -638,7 +665,6 @@ public abstract class DurableTaskStep extends Step implements EnvVarsFilterableB
                 getContext().onFailure(new IllegalStateException("did not expect output but got some"));
                 return;
             }
-            recurrencePeriod = 0;
             handleExit(exitCode, () -> output);
         }
 
@@ -652,11 +678,11 @@ public abstract class DurableTaskStep extends Step implements EnvVarsFilterableB
                 getContext().onSuccess(returnStatus ? exitCode : returnStdout ? new String(output.produce(), StandardCharsets.UTF_8) : null);
             } else {
                 if (returnStdout) {
-                    listener().getLogger().write(output.produce()); // diagnostic
+                    _listener().getLogger().write(output.produce()); // diagnostic
                 }
                 if (originalCause != null) {
                     // JENKINS-28822: Use the previous cause instead of throwing a new AbortException
-                    listener().getLogger().println("script returned exit code " + exitCode);
+                    _listener().getLogger().println("script returned exit code " + exitCode);
                     getContext().onFailure(originalCause);
                 } else {
                     getContext().onFailure(new AbortException("script returned exit code " + exitCode));
@@ -689,21 +715,6 @@ public abstract class DurableTaskStep extends Step implements EnvVarsFilterableB
 
     private static class HandlerImpl extends Handler {
 
-        private static final Field printStreamDelegate;
-        static {
-            try {
-                printStreamDelegate = FilterOutputStream.class.getDeclaredField("out");
-            } catch (NoSuchFieldException x) {
-                // Defined in Java Platform and protected, so should not happen.
-                throw new ExceptionInInitializerError(x);
-            }
-            try {
-                printStreamDelegate.setAccessible(true);
-            } catch (/* TODO Java 11+ InaccessibleObjectException */RuntimeException x) {
-                LOGGER.log(Level.WARNING, "On Java 17 error handling is degraded unless `--add-opens java.base/java.io=ALL-UNNAMED` is passed to the agent", x);
-            }
-        }
-
         private static final long serialVersionUID = 1L;
 
         private final ExecutionRemotable execution;
@@ -716,34 +727,24 @@ public abstract class DurableTaskStep extends Step implements EnvVarsFilterableB
 
         @Override public void output(@NonNull InputStream stream) throws Exception {
             PrintStream ps = listener.getLogger();
+            OutputStream os = OutputStreamTaskListener.getOutputStream(listener);
             try {
-                if (ps.getClass() == PrintStream.class) {
-                    // Try to extract the underlying stream, since swallowing exceptions is undesirable and PrintStream.checkError is useless.
-                    OutputStream os = ps;
-                    try {
-                        os = (OutputStream) printStreamDelegate.get(ps);
-                    } catch (IllegalAccessException x) {
-                        LOGGER.log(Level.FINE, "using PrintStream rather than underlying FilterOutputStream.out", x);
-                    }
-                    if (os == null) { // like PrintStream.ensureOpen
-                        throw new IOException("Stream closed");
-                    }
-                    synchronized (ps) { // like PrintStream.write overloads do
-                        IOUtils.copy(stream, os);
-                    }
-                } else {
-                    // A subclass. Who knows why, but trust any write(…) overrides it may have.
-                    IOUtils.copy(stream, ps);
+                synchronized (ps) { // like PrintStream.write overloads do
+                    IOUtils.copy(stream, os);
                 }
+                LOGGER.finest(() -> "print to " + os + " succeeded");
             } catch (ChannelClosedException x) {
+                LOGGER.log(Level.FINE, null, x);
                 // We are giving up on this watch. Wait for some call to getWorkspace to rewatch.
                 throw x;
             } catch (Exception x) {
+                LOGGER.log(Level.FINE, null, x);
                 // Try to report it to the controller.
                 try {
                     execution.problem(x);
                     // OK, printed to log on controller side, we may have lost some text but could continue.
                 } catch (Exception x2) { // e.g., RemotingSystemException
+                    LOGGER.log(Level.FINE, null, x2);
                     // No, channel seems to be broken, give up on this watch.
                     throw x;
                 }
@@ -753,6 +754,63 @@ public abstract class DurableTaskStep extends Step implements EnvVarsFilterableB
         @Override public void exited(int code, byte[] output) throws Exception {
             listener.getLogger().close();
             execution.exited(code, output);
+        }
+
+    }
+
+    @Extension public static final class AgentReconnectionListener extends ComputerListener {
+
+        @Override public void onOffline(Computer c, OfflineCause cause) {
+            if (!USE_WATCHING) {
+                return;
+            }
+            if (Jenkins.get().isTerminating()) {
+                LOGGER.fine(() -> "Skipping check on " + c.getName() + " during shutdown");
+                return;
+            }
+            check(c);
+        }
+
+        @Override public void onOnline(Computer c, TaskListener listener) throws IOException, InterruptedException {
+            if (!USE_WATCHING) {
+                return;
+            }
+            if (!FlowExecutionList.get().isResumptionComplete()) {
+                LOGGER.fine(() -> "Skipping check on " + c.getName() + " before builds are ready");
+                return;
+            }
+            check(c);
+        }
+
+        private void check(Computer c) {
+            String name = c.getName();
+            // More efficient than StepExecution.acceptAll(Execution.class, exec -> …):
+            for (var executor : c.getExecutors()) {
+                var executable = executor.getCurrentExecutable();
+                if (executable != null && executable.getParentExecutable() instanceof FlowExecutionOwner.Executable feoe) {
+                    var feo = feoe.asFlowExecutionOwner();
+                    if (feo != null) {
+                        try {
+                            var fe = feo.get();
+                            var executionsFuture = fe.getCurrentExecutions(true);
+                            executionsFuture.addListener(() -> {
+                                try {
+                                    for (var execution : executionsFuture.get()) {
+                                        if (execution instanceof Execution exec && exec.watching && exec.node.equals(name)) {
+                                            LOGGER.fine(() -> "Online/offline event on " + name + ", checking current status of " + exec.remote + " soon");
+                                            threadPool().schedule(exec::check, 15, TimeUnit.SECONDS);
+                                        }
+                                    }
+                                } catch (Exception x) {
+                                    LOGGER.log(Level.WARNING, "could not inspect " + fe, x);
+                                }
+                            }, Runnable::run);
+                        } catch (IOException x) {
+                            LOGGER.log(Level.WARNING, "could not inspect " + feo, x);
+                        }
+                    }
+                }
+            }
         }
 
     }
